# qt_helloworld

./: CMakeLists.txt  main.cc  main.h
